--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -3,7 +3,7 @@ $body: #eaeaea;
 $mainColor3: #bbbbbb;
 $mainColor: #414141;
 $mainColor2: #353436;
-$mainColor4: #1c1c20;
+$mainColor4: #1e1e1e;
 
 $secondaryColor: #ff4d4d;
 $secondaryColor2: #ff4f4f;
