--- a/public/css/main.css
+++ b/public/css/main.css
@@ -246,7 +246,7 @@ svg:focus {
     width: 404px;
     height: 100%; }
     #main-bar .bar-wrapper #bar-trigger {
-      color: #1c1c20;
+      color: #1e1e1e;
       font-family: 'work500';
       width: 30px;
       height: 60px;
@@ -372,7 +372,7 @@ svg:focus {
     #main-content .main-over-wrapper .main-content-wrapper .grid-item-widthx2 {
       width: 66.6%; }
     #main-content .main-over-wrapper .main-content-wrapper .grid-item {
-      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(28, 28, 32, 0.03), 0 -1px 0 rgba(28, 28, 32, 0.03);
+      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(30, 30, 30, 0.03), 0 -1px 0 rgba(30, 30, 30, 0.03);
       width: 33.3%;
       overflow: hidden; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
@@ -407,10 +407,11 @@ svg:focus {
                 margin: 35px 35px 0 35px;
                 font-family: 'ratBook';
                 text-transform: uppercase;
-                font-size: calc(26px + 4 * (100vw - 320px) / 1180);
-                line-height: 2rem;
+                font-size: calc(24px + 4 * (100vw - 320px) / 1180);
+                line-height: 1.9rem;
+                -webkit-font-smoothing: antialiased !important;
                 max-width: 99%;
-                color: #1c1c20;
+                color: #1e1e1e;
                 -webkit-hyphens: auto;
                 -moz-hyphens: auto;
                 -ms-hyphens: auto;
@@ -444,10 +445,10 @@ svg:focus {
                   font-size: .8rem;
                   margin-right: 6px;
                   text-decoration: underline;
-                  color: #1c1c20;
+                  color: #1e1e1e;
                   text-decoration-color: transparent; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword .over-article-word {
-                    color: #1c1c20;
+                    color: #1e1e1e;
                     transition: .1s all ease-out;
                     text-transform: uppercase; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword:hover {
@@ -647,11 +648,16 @@ footer {
   height: 100% !important; }
 
 .article-back-black {
-  background-color: #1c1c20 !important;
+  background-color: #1e1e1e !important;
   color: #bbbbbb !important; }
 
 .article-color-black {
-  color: #f3f3f6 !important; }
+  color: #f3f3f6 !important;
+  -webkit-font-smoothing: antialiased !important; }
+
+.article-color-white {
+  color: #1e1e1e !important;
+  -webkit-font-smoothing: antialiased !important; }
 
 .article-white-black {
   background-color: #bbbbbb !important; }
@@ -683,7 +689,7 @@ footer {
         margin-left: 3px;
         margin-top: 2px;
         transform: translate(-50%, -50%);
-        font-family: 'ratDb';
+        font-family: 'eleb';
         text-transform: uppercase;
         font-size: 0.65rem;
         letter-spacing: 0.1rem;
@@ -692,7 +698,7 @@ footer {
       #article-content .article-content-wrapper .article-closer-container .article-close-line {
         position: absolute;
         width: 35px;
-        height: 2px;
+        height: 3px;
         top: 50%;
         transform: translate(0%, -50%);
         background-color: #ff4d4d;
@@ -705,6 +711,7 @@ footer {
       #article-content .article-content-wrapper .article-closer-container:hover {
         cursor: pointer; }
         #article-content .article-content-wrapper .article-closer-container:hover .line-one {
+          margin-left: 0px;
           top: 10%;
           transform: rotate(0deg); }
         #article-content .article-content-wrapper .article-closer-container:hover .line-two {
@@ -712,64 +719,60 @@ footer {
           transform: rotate(0deg); }
         #article-content .article-content-wrapper .article-closer-container:hover:after {
           opacity: 1; }
-    #article-content .article-content-wrapper figure {
-      width: 100%;
-      max-height: 600px;
-      overflow: hidden; }
-      #article-content .article-content-wrapper figure img {
-        width: 100%; }
-      #article-content .article-content-wrapper figure figcaption {
-        font-family: 'saxi';
-        color: #414141;
-        text-align: right;
-        margin-right: 5px;
-        margin-top: 5px;
-        font-size: 1rem;
-        line-height: 1.3rem; }
     #article-content .article-content-wrapper .article-content-info {
       margin: 0 auto;
-      color: #1c1c20;
+      color: #1e1e1e;
       width: 100%;
       min-width: 340px; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable {
         font-weight: 400;
         width: 100%;
         text-align: left; }
-        #article-content .article-content-wrapper .article-content-info .article-content-readable header {
+        #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header {
           display: inline-block;
-          margin-top: 12px; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-title {
-            display: inline-block;
-            font-size: calc(60px + 4 * (100vw - 320px) / 1180);
-            font-family: 'ratThin';
-            text-transform: uppercase;
-            line-height: calc(66px + 4 * (100vw - 320px) / 1180);
-            min-width: 360px;
-            width: 70%;
-            -webkit-hyphens: auto;
-            -moz-hyphens: auto;
-            -ms-hyphens: auto;
-            -webkit-hyphenate-character: '⌁';
-            hyphens: auto;
-            margin: 0px 5%;
-            -webkit-font-smoothing: antialiased !important; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-type-container {
-            margin-left: 5%; }
-            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-type-container .article-content-type {
-              margin-left: 4px;
-              display: inline-block;
-              vertical-align: middle;
-              font-family: 'ratDemiB';
-              border-radius: 5%;
-              color: white;
-              text-transform: uppercase;
-              background-color: #ff4d4d;
-              padding: 6px 5px 4px 6px;
-              letter-spacing: 0.1rem;
-              font-size: 0.7rem; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container {
+          position: relative; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top {
+            position: relative; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-main-image {
+              width: 100%;
+              max-height: 600px;
+              overflow: hidden; }
+              #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-main-image img {
+                width: 100%; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container {
+              position: absolute;
+              top: 0; }
+              #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container .article-content-title {
+                font-size: calc(36px + 4 * (100vw - 320px) / 1180);
+                font-family: 'eleb';
+                text-transform: uppercase;
+                line-height: calc(44px + 4 * (100vw - 320px) / 1180);
+                min-width: 360px;
+                width: 60%;
+                -webkit-hyphens: auto;
+                -moz-hyphens: auto;
+                -ms-hyphens: auto;
+                -webkit-hyphenate-character: '⌁';
+                hyphens: auto;
+                margin: 25px 5% 0px 5%; }
+              #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container .article-content-type-container {
+                margin-left: 5%; }
+                #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container .article-content-type-container .article-content-type {
+                  margin-left: 3px;
+                  display: inline-block;
+                  vertical-align: middle;
+                  font-family: 'ratDemiB';
+                  border-radius: 5%;
+                  margin-top: 6px;
+                  color: white;
+                  text-transform: uppercase;
+                  background-color: #ff4d4d;
+                  padding: 6px 5px 4px 6px;
+                  letter-spacing: 0.1rem;
+                  font-size: 0.7rem; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container {
             width: 100%; }
-            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle {
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle {
               font-family: 'ratDemiB';
               width: 60%;
               float: right;
@@ -777,30 +780,31 @@ footer {
               font-size: calc(13px + 4 * (100vw - 320px) / 1180);
               line-height: 1.55rem;
               -webkit-font-smoothing: antialiased !important; }
-              #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container {
+              #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container {
                 margin-bottom: 20px;
                 margin-top: 8px; }
-                #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords {
-                  background-color: #1c1c20;
+                #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords {
+                  background-color: #1e1e1e;
                   display: inline-block;
-                  height: 15px;
+                  height: 17px;
                   border-radius: 1px; }
-                  #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword {
+                  #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword {
                     font-family: 'ratBook';
                     text-transform: uppercase;
-                    font-size: 0.6rem;
+                    font-size: 0.7rem;
                     vertical-align: top;
-                    padding: 0px 3px 2px 3px;
+                    padding: 0px 5px 4px 5px;
                     margin-top: -3px;
                     margin-right: 10px;
                     display: inline-block;
                     color: #bbbbbb; }
-                    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:before {
+                    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:before {
                       content: '#';
-                      display: inline-block; }
-                    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:nth-last-of-type(1) {
+                      display: inline-block;
+                      margin-right: -5px; }
+                    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:nth-last-of-type(1) {
                       margin-right: 0px; }
-                    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:hover {
+                    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:hover {
                       font-family: 'ratDemiB';
                       cursor: pointer; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
@@ -916,7 +920,7 @@ footer {
     width: 90%;
     column-count: 2;
     column-gap: 80px;
-    column-rule: 1px dotted rgba(28, 28, 32, 0.8);
+    column-rule: 1px dotted;
     -webkit-hyphenate-character: '⌁';
     padding: 0;
     font-size: calc(11px + 4 * (100vw - 320px) / 1180);
@@ -924,8 +928,7 @@ footer {
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p:after {
       content: "↙︎";
       width: 20px;
-      height: 2px;
-      color: #1c1c20; }
+      height: 2px; }
   #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture {
     width: 100%;
     padding: 0px !important;
