--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -23,6 +23,11 @@
 }
 
 @font-face {
+  font-family: 'eleMI';
+  src: url('/fonts/eleMI.otf');
+}
+
+@font-face {
   font-family: 'sax';
   src: url('/fonts/sax.otf');
 }
