--- a/public/css/main.css
+++ b/public/css/main.css
@@ -241,7 +241,7 @@ svg:focus {
   width: 30px;
   position: fixed;
   top: 0px;
-  transform: translateX(-363px);
+  transform: translateX(-360px);
   z-index: 10; }
   #main-bar .bar-fix {
     position: fixed;
@@ -250,8 +250,8 @@ svg:focus {
     width: 404px;
     height: 100%; }
     #main-bar .bar-wrapper #bar-trigger {
-      color: #1e1e1e;
-      font-family: 'work500';
+      color: #2e2e2e;
+      font-family: 'ratDemiB';
       width: 30px;
       height: 60px;
       margin-left: 6px;
@@ -259,7 +259,8 @@ svg:focus {
       margin-top: 50px;
       opacity: 0;
       transition: all 0.25s ease-in;
-      position: relative; }
+      position: relative;
+      text-transform: uppercase; }
       #main-bar .bar-wrapper #bar-trigger:hover {
         cursor: pointer; }
         #main-bar .bar-wrapper #bar-trigger:hover .icon {
@@ -271,17 +272,17 @@ svg:focus {
         transform-origin: 8px;
         backface-visibility: visible; }
       #main-bar .bar-wrapper #bar-trigger .tag-info {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         width: 380px;
         height: 26px;
         text-align: right;
         transform: rotateZ(-88.5deg) translate(-190px, -174px);
-        letter-spacing: 0.08rem; }
+        letter-spacing: 0.08em; }
         #main-bar .bar-wrapper #bar-trigger .tag-info .message {
           font-weight: 300; }
         #main-bar .bar-wrapper #bar-trigger .tag-info .tag {
-          font-family: 'plaHeavy';
-          text-transform: lowercase; }
+          font-family: 'ratDBi';
+          text-transform: uppercase; }
     #main-bar .bar-wrapper #bar-menu {
       width: 360px;
       display: inline-block;
@@ -376,7 +377,7 @@ svg:focus {
     #main-content .main-over-wrapper .main-content-wrapper .grid-item-widthx2 {
       width: 66.6%; }
     #main-content .main-over-wrapper .main-content-wrapper .grid-item {
-      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(30, 30, 30, 0.03), 0 -1px 0 rgba(30, 30, 30, 0.03);
+      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(46, 46, 46, 0.03), 0 -1px 0 rgba(46, 46, 46, 0.03);
       width: 33.3%;
       overflow: hidden; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
@@ -415,7 +416,7 @@ svg:focus {
                 line-height: 1.9rem;
                 -webkit-font-smoothing: antialiased !important;
                 max-width: 99%;
-                color: #1e1e1e;
+                color: #2e2e2e;
                 -webkit-hyphens: auto;
                 -moz-hyphens: auto;
                 -ms-hyphens: auto;
@@ -449,10 +450,10 @@ svg:focus {
                   font-size: .8rem;
                   margin-right: 6px;
                   text-decoration: underline;
-                  color: #1e1e1e;
+                  color: #2e2e2e;
                   text-decoration-color: transparent; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword .over-article-word {
-                    color: #1e1e1e;
+                    color: #2e2e2e;
                     transition: .1s all ease-out;
                     text-transform: uppercase; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword:hover {
@@ -652,19 +653,19 @@ footer {
   height: 100% !important; }
 
 .article-back-black {
-  background-color: #1e1e1e !important;
-  color: #bbbbbb !important; }
+  background-color: #2e2e2e !important;
+  color: #2e2e2e !important; }
 
 .article-color-black {
   color: #f3f3f6 !important;
   -webkit-font-smoothing: antialiased !important; }
 
 .article-color-white {
-  color: #1e1e1e !important;
+  color: #2e2e2e !important;
   -webkit-font-smoothing: antialiased !important; }
 
 .article-white-black {
-  background-color: #bbbbbb !important; }
+  background-color: #2e2e2e !important; }
 
 #article-content {
   position: fixed;
@@ -726,7 +727,7 @@ footer {
           opacity: 1; }
     #article-content .article-content-wrapper .article-content-info {
       margin: 0 auto;
-      color: #1e1e1e;
+      color: #2e2e2e;
       width: 100%;
       min-width: 340px; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable {
@@ -791,7 +792,7 @@ footer {
                 margin-bottom: 20px;
                 margin-top: 8px; }
                 #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords {
-                  background-color: #1e1e1e;
+                  background-color: #2e2e2e;
                   display: inline-block;
                   height: 17px;
                   border-radius: 1px; }
@@ -804,7 +805,7 @@ footer {
                     margin-top: -3px;
                     margin-right: 10px;
                     display: inline-block;
-                    color: #bbbbbb; }
+                    color: #2e2e2e; }
                     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:before {
                       content: '#';
                       display: inline-block;
@@ -864,16 +865,26 @@ footer {
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture-xl img {
             width: 100%; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote {
-          width: 50%;
+          width: 40%;
           margin-left: 10%;
-          float: left; }
+          float: left;
+          margin-right: 10px; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p {
-            line-height: calc(22px + 4 * (100vw - 320px) / 1180);
-            font-size: calc(12px + 4 * (100vw - 320px) / 1180);
-            line-height: 1.4rem;
+            font-size: calc(18px + 4 * (100vw - 320px) / 1180);
+            line-height: 1.2em;
             margin: 0 30px 10px 0; }
             #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p q {
-              font-family: 'eleMI'; }
+              font-family: 'eleM'; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p:before {
+              content: '"';
+              display: inline-block;
+              font-family: 'ratBookI';
+              font-size: 1.2em; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p:after {
+              content: '"';
+              display: inline-block;
+              font-family: 'ratBookI';
+              font-size: 1.2em; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote:nth(odd) {
             float: right !important;
             margin-right: 10%; }
@@ -892,7 +903,7 @@ footer {
   width: 100% !important;
   height: 100% !important; }
 
-@media all and (max-width: 960px) {
+@media all and (max-width: 640px) {
   #article-content .article-content-wrapper .article-content-info {
     padding: 0;
     width: 100%; }
@@ -900,9 +911,8 @@ footer {
       position: absolute;
       top: 0; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container .article-content-title {
-        font-size: calc(32px + 4 * (100vw - 320px) / 1180);
-        font-family: 'eleb';
-        line-height: calc(44px + 4 * (100vw - 320px) / 1180);
+        font-size: calc(30px + 4 * (100vw - 320px) / 1180);
+        line-height: calc(40px + 4 * (100vw - 320px) / 1180);
         margin: 15px 5% 0px 5%; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container .article-content-type-container {
         margin-left: 5%; }
@@ -932,7 +942,7 @@ footer {
           margin-bottom: 20px;
           margin-top: 8px; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords {
-            background-color: #1e1e1e;
+            background-color: #2e2e2e;
             display: inline-block;
             height: 17px;
             border-radius: 1px; }
@@ -945,7 +955,7 @@ footer {
               margin-top: -3px;
               margin-right: 10px;
               display: inline-block;
-              color: #bbbbbb; }
+              color: #2e2e2e; }
               #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:before {
                 content: '#';
                 display: inline-block;
@@ -974,16 +984,23 @@ footer {
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture img {
         width: 100%; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote {
-      width: 100%; }
+      width: 84%;
+      float: none;
+      margin: 0 8% 30px 8%; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p {
-        margin: 25px 20px 35px 0;
-        float: right;
-        width: 70%;
-        font-family: 'saxi';
-        font-size: 1.2em;
-        line-height: 1.2em; } }
+        font-size: calc(18px + 4 * (100vw - 320px) / 1180);
+        line-height: 1.3em;
+        margin: 0; }
+        #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p q {
+          font-family: 'eleM'; } }
 
 @media all and (min-width: 1480px) {
+  #article-content .article-content-wrapper .article-content-info .article-content-readable .article-header .article-header-top .article-content-title-container .article-content-title {
+    font-size: calc(58px + 4 * (100vw - 320px) / 1180);
+    font-family: 'eleb';
+    line-height: calc(78px + 4 * (100vw - 320px) / 1180);
+    margin: 15px 5% 0px 5%;
+    width: 50%; }
   #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
     margin-top: 50px;
     -webkit-hyphens: auto;
@@ -1009,18 +1026,13 @@ footer {
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture img {
       width: 100%; }
   #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote {
-    width: 100%; }
-    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p {
-      margin: 25px 20px 35px 0;
-      float: right;
-      width: 70%;
-      font-family: 'saxi';
-      font-size: 1.2em;
-      line-height: 1.2em; } }
+    width: 40%;
+    margin: 44px 30% 40px 30%;
+    float: none; } }
 
 #app {
-  background: #e6e6e6e6;
-  background: url("/img/noise.png"), rgba(230, 230, 230, 0.97); }
+  background: url("/img/noise.png"), linear-gradient(to bottom, #a8a8a8 35%, #ACB7B6 55%, #a8a8a8 80%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ }
 
 body {
   font-family: 'Fira Sans';
